Fixed Projects Alignment
Fixed Projects Alignment. Old noob.

--- a/css/agency.css
+++ b/css/agency.css
@@ -18,6 +18,10 @@ body {
     font-family: "Roboto Slab","Helvetica Neue",Helvetica,Arial,sans-serif;
 }
 
+.spacer {
+    margin-top: 40px;
+}
+
 .text-muted {
     color: #777;
 }
